err/p01.elasticsearch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/p01'...
Listing './lib/python3.5/site-packages/p01/elasticsearch'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/config'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/config/mappings'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/config/mappings/testing'...
Compiling './lib/python3.5/site-packages/p01/elasticsearch/connection.py'...
***   File "./lib/python3.5/site-packages/p01/elasticsearch/connection.py", line 232
    httplib.BadStatusLine), e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/p01/elasticsearch/pool.py'...
***   File "./lib/python3.5/site-packages/p01/elasticsearch/pool.py", line 89
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01/elasticsearch/sample'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sample/config'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sample/config/companies'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sample/sandbox'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sample/sandbox/config'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sample/sandbox/config/companies'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sandbox'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sandbox/config'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sandbox/config/mappings'...
Listing './lib/python3.5/site-packages/p01/elasticsearch/sandbox/config/mappings/testing'...
Compiling './lib/python3.5/site-packages/p01/elasticsearch/testing.py'...
***   File "./lib/python3.5/site-packages/p01/elasticsearch/testing.py", line 61
    print self(data)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01/elasticsearch/thriftconnector'...
Compiling './lib/python3.5/site-packages/p01/elasticsearch/thriftconnector/simple_test.py'...
***   File "./lib/python3.5/site-packages/p01/elasticsearch/thriftconnector/simple_test.py", line 28
    print client.execute(res)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01.elasticsearch-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.11.0.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
